# web-dump-rs

./: .nvim-dap.lua  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: binary-release.yml  lint.yml
src/: args.rs  handler.rs  intro.rs  main.rs  storage.rs  utils.rs  web.rs  wordlist.rs
